added deps to Pipfile

--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,8 @@ verify_ssl = true
 
 [packages]
 chatterbot-corpus = {git = "https://github.com/gunthercox/chatterbot-corpus.git"}
+chatterbot = '>=1.0.5'
+flask = '>=1.1.1'
 
 [requires]
 python_version = "3.8"
